2005-12-07  William Otte  <wotte@dre.vanderbilt.edu>

	* CXX/WriterHeader.cpp

	Removed Borland specifc ifdefs to make the fix from:
	2005-10-03  William Otte  <wotte@dre.vanderbilt.edu>
	apply to all compilers.
	
	* Examples/Library/Reader/Makefile
	* Examples/Library/Writer/Makefile

	Fixed the name of the xsc binary listed there. 
	
2005-11-30  William Otte  <wotte@dre.vanderbilt.edu>

	* xsc.cpp

	Updated version string.
	
	* CXX/Elements.hpp
	* CXX/Generator.cpp
	* CXX/Header.cpp
	* CXX/Inline.cpp
	* CXX/WriterHeader.cpp
	* XSC/Parser.cpp

	Added support for optionally generating code using lists or 
	vectors for sequences with cardinality greater than one. 
	
2005-10-03  William Otte  <wotte@dre.vanderbilt.edu>

	* CXX/Header.cpp

	Added opererator== and operator!= prototypes after classes that
	define them
	
	* CXX/WriterHeader.cpp
	* CXX/WriterSource.cpp

	Fixed compile errors in Borland.
	
Fri Aug 19 09:39:48 2005  Arvind S. Krishna  <arvindk@dre.vanderbilt.edu>

        * CXX/Inline.cpp:

          Fixed the following errors: when the count operation is
          generated, the signature is size_t count_foo () const; however
          the definition has the const missing. Similarly, void add_foo
          (Foo_Type) opertion in the cpp file is generated as add_foo
          (Foo_Type) const; fixed this error

2005-08-16  William Otte  <wotte@dre.vanderbilt.edu>

	* CXX/Header.cpp
	* CXX/Inline.cpp

	Added a method to count the number of elements present when
	maxOccurs > 1.

2005-08-05  William Otte  <wotte@dre.vanderbilt.edu>

	* XSC/SemanticGraph.hpp

	Added this back into the repository.

Thu Aug  4 11:25:52 2005  Arvind Krishna  <arvindkr@arvindkr.qualcomm.com>

	* Tests/ComplexTypeImport:

	  A simple test where a schema's type extends a type defined in
	  another schema.

	* Tests/ComplexTypeImport/Importee.xsd:
	* Tests/ComplexTypeImport/Importer.xsd:

	  Individual schema files.
