@@ -1,0 +1,35 @@
+<?xml version="1.0" encoding="UTF-8" ?>
+<xsd:schema xmlns:xsd="http://www.w3.org/2001/XMLSchema" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://www.w3.org/2001/XMLSchema XMLSchema.xsd" xmlns:xsc="http://www.dre.vanderbilt.edu/XSC/Tests"
+  targetNamespace="http://www.dre.vanderbilt.edu/XSC/Tests">
+  <xsd:complexType name="SchoolDirectory">
+    <xsd:sequence minOccurs="0" maxOccurs="unbounded">
+      <xsd:element name="StudentEntry" type="Student" />
+    </xsd:sequence>
+  </xsd:complexType>
+  <xsd:complexType name="Student" abstract="true">
+    <xsd:sequence>
+      <xsd:element name="FirstName" type="xsd:string" />
+      <xsd:element name="LastName" type="xsd:string" />
+      <xsd:element name="SSN" type="xsd:string" />
+    </xsd:sequence>
+  </xsd:complexType>
+  <xsd:complexType name="UndergraduateStudent">
+    <xsd:complexContent>
+      <xsd:extension base="xsc:Student">
+        <xsd:sequence>
+          <xsd:element name="HighSchool" type="xsd:string" />
+        </xsd:sequence>
+      </xsd:extension>
+    </xsd:complexContent>
+  </xsd:complexType>
+  <xsd:complexType name="GraduateStudent">
+    <xsd:complexContent>
+      <xsd:extension base="xsc:UndergraduateStudent">
+        <xsd:sequence minOccurs="1" maxOccurs="1">
+          <xsd:element name="UndergraduateSchool" type="xsd:string" />
+        </xsd:sequence>
+      </xsd:extension>
+    </xsd:complexContent>
+  </xsd:complexType>
+</xsd:schema>
